--- a/app/assets/css/sass/_page_membership.scss
+++ b/app/assets/css/sass/_page_membership.scss
@@ -243,6 +243,7 @@
 		.ms-settings-footer {
 			position: absolute;
 			bottom: -60px;
+			z-index: 10;
 		}
 
 		th.column-active,
