--- a/app/assets/css/sass/_styles_header_footer.scss
+++ b/app/assets/css/sass/_styles_header_footer.scss
@@ -27,5 +27,6 @@
 	.ms-settings-footer{
 		position: relative;
 		margin: 10px 0;
+		z-index: 10;
 	}
 }
